app-developer/nginx-controller-definition.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name:  nginx-ingress
    spec:
      containers:
      - image:  quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        name:  nginx-ingress-controller
      args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
      ports:
        - name: http
          conatinerPort: 80
        - name: https
          containerPort: 443
