app-developer/pod-command.yml
apiVersion: v1
kind: Pod
metadata:
  name: math-pod
  labels:
    name: math-pod
spec:
  containers:
  - name: math-pod
    image: ubuntu
    command: ['expr', '3', '+', '2']
  # restartPolicy: Always
  restartPolicy: Never
  # restartPolicy: OnFailure
