app-developer/pod-definition-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-secret
spec:
  containers:
  - name: simple-webapp-color
    image: simple-webapp-color
    ports:
      - containerPort: 8080
