app-developer/pod-log.yml
apiVersion: v1
kind: Pod
metadata:
  name: event-simulator
  labels:
    name: event-simulator
spec:
  containers:
  - name: event-simulator
    image: kodecloud/event-simulator
