app-developer/pod-nodeaffinity-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: nginx
    image: nginx
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: size
              # operator: In 
              # values:
              # - Large
              # operator: NotIn
              # values:
              # - Small
              operator: Exists
