app-developer/pod-readinessprobe.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
    # readinessProbe:  to use as HTTP
    #     httpGet:
    #       path: /api/ready
    #       port: 8080
          # initialDelaySecond: 10 time to warm up pod
          # periodSecond: 5 if u like how offen to probe
          # failureThreshold: 8 after some attemps the probe stop , if u want to continua more x times
    # readiessProbe: to use as TCP
    #     tcpScoket:
    #       port: 3306
    # readinessProbe: HTTP
    #     httpGet:
    #       path: /api/ready
    #       port: 8080
    # readinessProbe: to use as Command
    #     exec:
    #       command:
            # - cat
            # - /app/is_ready
