app-developer/pod-resource.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      request:
        memory: "1Gi"
        cpu: 1
      limits:
        memory: "2Gi"
        cpu: 2
    ports:
      - containerPort: 8080
