app-developer/pod-serviceaccount.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-nginx
spec:
  containers:
  - name: nginx
    image: nginx
serviceAccount: dashboard-sa
# automountServiceAccountToken: false // Dont let auto token mount
