app-developer/statefulset-definition.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-h
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
  replicas: 3
  podManagementPolicy: Parallel
  # Parallel creates the pods independent of other pod is ready or not.
  # dns sequence podname namespace svc cluster-domain example
