app-developer/statefulset-volume-definition.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          volumeMounts:
          - name: data-volume
            mountPath:  /var/lib/mysql
      # volumes:
      #   - name: data-volume
      #     persistentVolumeClaim:
      #         claimName: data-volume
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
          accessModes:
            - readWriteOnce
          storageClassName: google-storage
          resources:
            requests:
              storage: 500Mi
