app-developer/service-clusterip-definition.yml
kind: Service
apiVersion: v1
metadata:
  name:  Service Name
spec:
  selector:
    app:  myapp
    type: back-end
  type:  ClusterIP
  ports:
  - targetPort:  name-of-the-port
    port:  80
