app-developer/service-nodeport-definition.yml
kind: Service
apiVersion: v1
metadata:
  name:  myapp-service
spec:
  selector:
    app:  myapp
    type: front-end
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
