app-developer/network-polict-definition.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
    ports:
      - protocol: TCP
        port: 3306

# Solutions that support network policies
# . Kube-router
# . Calico
# . Romana
# . Weave-net

# Solutions that Do NOT support Network Policies
# . Flannel
